--- a/lobster.yaml
+++ b/lobster.yaml
@@ -1,7 +1,9 @@
 workdir: lobster.work
 
 tasks:
-  - dataset: '/TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-    dataset label: TTJets
+  - dataset: '/DoubleMu/Run2012A-13Jul2012-v1/AOD' #'/TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+    dataset label: DoubleMu
     cmssw config: makeBEAN_cfg.py
+    lumi mask: mask.json
+    lumis per task: 50
     parameters: []
