Adding support for reading from lists instead of published datasets.

--- a/lobster.yaml
+++ b/lobster.yaml
@@ -1,11 +1,12 @@
-id: BEAN_v1
-workdir: lobster.work
-stageout location: lobster.work
+id: BEAN_v2
+workdir: gpetrucc_ttH_gen_2013-05-23_lowmll
+stageout location: /hadoop/users/awoodard
 
 # cmd: 'python make_big_file.py'
 # inputs: ['make_big_file.py']
 # outputs: ['output.txt', 'log.txt']
 # max: 5000
+### use configuration above to run simple jobs ###
 
 tasks:
   - dataset: '/TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
@@ -14,3 +15,9 @@ tasks:
     lumi mask: mask.json
     outputs: [ttH_pat2bean_53x.root] #if this is not specified, the cmssw config will be loaded to look for output modules (slower)
     parameters: [jobParams=2012_X_MC-sigFullSim_9122]
+#   - dataset: gpetrucc_ttH_gen_2013-05-23_zz_lowmll_v2
+#     dataset list: zz_lowmll_v2.list #to run on unpublished data, specify a list (one file per line)
+#     dataset label: zz_lowmll_v2
+#     cmssw config: ttH_fastSim.py
+#     outputs: [fastSim_FASTSIM_HLT_PU.root]
+
