Adding example publishing options.

--- a/test/beanprod.yaml
+++ b/test/beanprod.yaml
@@ -1,8 +1,10 @@
-id: BEAN_v9
-workdir: /tmp/awoodard.lobster.v9
-stageout location: /store/user/awoodard/lobster.v9
+id: BEAN_v12
+workdir: /tmp/awoodard.lobster.v12
+stageout location: /store/user/awoodard/lobster.v12
 sandbox blacklist: ['*DrawPlots*']
 dbs url: 'https://cmsweb-testbed.cern.ch/dbs/int/phys03/'
+#dbs url: 'https://cmsweb.cern.ch/dbs/prod/phys03/'
+migrate parents: True
 
 # cmd: 'python make_big_file.py'
 # inputs: ['make_big_file.py']
@@ -11,37 +13,33 @@ dbs url: 'https://cmsweb-testbed.cern.ch/dbs/int/phys03/'
 ### use configuration above to run simple jobs ###
 
 tasks:
-  - dataset: '/TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-    dataset label: TTJets
-    cmssw config: makeBEAN_cfg.py
-    publish name: 'awoodard-lobster-test-v1'
-    lumi mask: mask.json
-    outputs: [ttH_pat2bean_53x.root] #if this is not specified, the cmssw config will be loaded to look for output modules (slower)
-    parameters: [jobParams=2012_X_MC-bg_2500]
+#   - dataset: '/TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+#     dataset label: TTJets
+#     cmssw config: test/makeBEAN_cfg.py
+#     lumi mask: mask.json
+#     outputs: [ttH_pat2bean_53x.root] #if this is not specified, the cmssw config will be loaded to look for output modules (slower)
+#     parameters: [jobParams=2012_X_MC-bg_2500]
   - dataset: '/TTH_Inclusive_M-125_8TeV_pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
     dataset label: TTH_125
-    cmssw config: makeBEAN_cfg.py
-    publish name: 'awoodard-lobster-test-v1'
-    outputs: [ttH_pat2bean_53x.root]
+    cmssw config: test/makeBEAN_cfg.py
+    publish label: 'test'
+#    outputs: [ttH_pat2bean_53x.root]
     parameters: [jobParams=2012_X_MC-sigFullSim_9125]
   - dataset: '/WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v2/AODSIM'
     dataset label: WJets
-    cmssw config: makeBEAN_cfg.py
-    publish name: 'awoodard-lobster-test-v1'
-    outputs: [ttH_pat2bean_53x.root]
+    cmssw config: test/makeBEAN_cfg.py
+#    outputs: [ttH_pat2bean_53x.root]
     parameters: [jobParams=2012_X_MC-bg_2400]
-  - dataset: '/DYJetsToLL_M-50_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-    dataset label: ZJets
-    cmssw config: makeBEAN_cfg.py
-    publish name: 'awoodard-lobster-test-v1'
-    outputs: [ttH_pat2bean_53x.root]
-    parameters: [jobParams=2012_X_MC-bg_2850]
-  - dataset: '/TTWJets_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-    dataset label: ttW
-    cmssw config: makeBEAN_cfg.py
-    publish name: 'awoodard-lobster-test-v1'
-    outputs: [ttH_pat2bean_53x.root]
-    parameters: [jobParams=2012_X_MC-bg_2524]
+#   - dataset: '/DYJetsToLL_M-50_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+#     dataset label: ZJets
+#     cmssw config: test/makeBEAN_cfg.py
+#     outputs: [ttH_pat2bean_53x.root]
+#     parameters: [jobParams=2012_X_MC-bg_2850]
+#   - dataset: '/TTWJets_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+#     dataset label: ttW
+#     cmssw config: test/makeBEAN_cfg.py
+#     outputs: [ttH_pat2bean_53x.root]
+#     parameters: [jobParams=2012_X_MC-bg_2524]
 #   - files: zz_lowmll_v2.list #to run on unpublished data, specify a list (one file per line) or directory
 #     dataset label: zz_lowmll_v2
 #     cmssw config: ttH_fastSim.py
