--- a/test/beanprod.yaml
+++ b/test/beanprod.yaml
@@ -1,6 +1,6 @@
-id: BEAN_v13
-workdir: /tmp/awoodard.lobster.v13
-stageout location: /store/user/awoodard/lobster.v13
+id: BEAN_t05
+workdir: /tmp/nvallsve.lobster.t05
+stageout location: /store/user/nvallsve/lobster.t05
 sandbox blacklist: ['*DrawPlots*']
 dbs url: 'https://cmsweb-testbed.cern.ch/dbs/int/phys03/' #For testing
 #dbs url: 'https://cmsweb.cern.ch/dbs/prod/phys03/' #For production
@@ -13,36 +13,36 @@ migrate parents: True
 ### use configuration above to run simple jobs ###
 
 tasks:
-  - dataset: '/TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-    dataset label: TTJets
-    cmssw config: test/makeBEAN_cfg.py
-    lumi mask: mask.json
-    outputs: [ttH_pat2bean_53x.root] #if this is not specified, the cmssw config will be loaded to look for output modules and global tags (slower)
-    parameters: [jobParams=2012_X_MC-bg_2500]
-  - dataset: '/TTH_Inclusive_M-125_8TeV_pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-    dataset label: TTH_125
-    cmssw config: test/makeBEAN_cfg.py
-    publish label: 'test'
-#    outputs: [ttH_pat2bean_53x.root]
-    parameters: [jobParams=2012_X_MC-sigFullSim_9125]
+#  - dataset: '/TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+#    dataset label: TTJets
+#    cmssw config: test/makeBEAN_cfg.py
+#    lumi mask: mask.json
+#    outputs: [ttH_pat2bean_53x.root] #if this is not specified, the cmssw config will be loaded to look for output modules and global tags (slower)
+#    parameters: [jobParams=2012_X_MC-bg_2500]
+#  - dataset: '/TTH_Inclusive_M-125_8TeV_pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+#    dataset label: TTH_125
+#    cmssw config: test/makeBEAN_cfg.py
+#    publish label: 'test'
+##    outputs: [ttH_pat2bean_53x.root]
+#    parameters: [jobParams=2012_X_MC-sigFullSim_9125]
   - dataset: '/WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v2/AODSIM'
     dataset label: WJets
     publish label: 'test'
     cmssw config: test/makeBEAN_cfg.py
 #    outputs: [ttH_pat2bean_53x.root]
     parameters: [jobParams=2012_X_MC-bg_2400]
-  - dataset: '/DYJetsToLL_M-50_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-    dataset label: ZJets
-    cmssw config: test/makeBEAN_cfg.py
-    outputs: [ttH_pat2bean_53x.root]
-    parameters: [jobParams=2012_X_MC-bg_2850]
-  - dataset: '/TTWJets_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-    dataset label: ttW
-    cmssw config: test/makeBEAN_cfg.py
-    outputs: [ttH_pat2bean_53x.root]
-    parameters: [jobParams=2012_X_MC-bg_2524]
-  - files: zz_lowmll_v2.list #to run on unpublished data, specify a list (one file per line) or directory
-    dataset label: zz_lowmll_v2
-    cmssw config: ttH_fastSim.py
-    outputs: [fastSim_FASTSIM_HLT_PU.root]
+#  - dataset: '/DYJetsToLL_M-50_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+#    dataset label: ZJets
+#    cmssw config: test/makeBEAN_cfg.py
+#    outputs: [ttH_pat2bean_53x.root]
+#    parameters: [jobParams=2012_X_MC-bg_2850]
+#  - dataset: '/TTWJets_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+#    dataset label: ttW
+#    cmssw config: test/makeBEAN_cfg.py
+#    outputs: [ttH_pat2bean_53x.root]
+#    parameters: [jobParams=2012_X_MC-bg_2524]
+#  - files: zz_lowmll_v2.list #to run on unpublished data, specify a list (one file per line) or directory
+#    dataset label: zz_lowmll_v2
+#    cmssw config: ttH_fastSim.py
+#    outputs: [fastSim_FASTSIM_HLT_PU.root]
 
