Add default values for datasets and add missing configuration bits.

--- a/test/beanprod.yaml
+++ b/test/beanprod.yaml
@@ -1,12 +1,15 @@
-id: BEAN_t05
-workdir: /tmp/nvallsve.lobster.t05
-stageout location: /store/user/nvallsve/lobster.t05
+id: <your id here>
+workdir: <your working directory here>
+
+stageout location: <your stageout directory here>
+sandbox blacklist: ['*DrawPlots*']
+
 dbs url: 'https://cmsweb-testbed.cern.ch/dbs/int/phys03/' #For testing
 #dbs url: 'https://cmsweb.cern.ch/dbs/prod/phys03/' #For production
 migrate parents: True
-sandbox blacklist: ['*DrawPlots*']
 #recycle sandbox: /tmpscratch/users/awoodard/sandbox.tar.bz2 #Option to specify sandbox instead of creating one at startup
 
+use dashboard: true
 
 # cmd: 'python make_big_file.py'
 # inputs: ['make_big_file.py']
@@ -14,37 +17,49 @@ sandbox blacklist: ['*DrawPlots*']
 # max: 5000
 ### use configuration above to run simple jobs ###
 
+task defaults:
+    cmssw config: test/makeBEAN_cfg.py
+    outputs: [ttH_pat2bean_53x.root] #if this is not specified, the cmssw config will be loaded to look for output modules and global tags (slower)
+    publish label: 'test'
+
 tasks:
-#  - dataset: '/TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-#    dataset label: TTJets
-#    cmssw config: test/makeBEAN_cfg.py
-#    lumi mask: mask.json
-#    outputs: [ttH_pat2bean_53x.root] #if this is not specified, the cmssw config will be loaded to look for output modules and global tags (slower)
-#    parameters: [jobParams=2012_X_MC-bg_2500]
-#  - dataset: '/TTH_Inclusive_M-125_8TeV_pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-#    dataset label: TTH_125
-#    cmssw config: test/makeBEAN_cfg.py
-#    publish label: 'test'
-##    outputs: [ttH_pat2bean_53x.root]
-#    parameters: [jobParams=2012_X_MC-sigFullSim_9125]
+  - dataset: '/TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+    dataset label: TTJets
+    parameters: [jobParams=2012_X_MC-bg_2500]
+  - dataset: '/TTH_Inclusive_M-125_8TeV_pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+    dataset label: TTH_125
+    parameters: [jobParams=2012_X_MC-sigFullSim_9125]
   - dataset: '/WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v2/AODSIM'
     dataset label: WJets
-    publish label: 'test'
-    cmssw config: test/makeBEAN_cfg.py
-#    outputs: [ttH_pat2bean_53x.root]
     parameters: [jobParams=2012_X_MC-bg_2400]
-#  - dataset: '/DYJetsToLL_M-50_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-#    dataset label: ZJets
-#    cmssw config: test/makeBEAN_cfg.py
-#    outputs: [ttH_pat2bean_53x.root]
-#    parameters: [jobParams=2012_X_MC-bg_2850]
-#  - dataset: '/TTWJets_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
-#    dataset label: ttW
-#    cmssw config: test/makeBEAN_cfg.py
-#    outputs: [ttH_pat2bean_53x.root]
-#    parameters: [jobParams=2012_X_MC-bg_2524]
-#  - files: zz_lowmll_v2.list #to run on unpublished data, specify a list (one file per line) or directory
-#    dataset label: zz_lowmll_v2
-#    cmssw config: ttH_fastSim.py
-#    outputs: [fastSim_FASTSIM_HLT_PU.root]
-
+  - dataset: '/DYJetsToLL_M-50_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+    dataset label: ZJets
+    parameters: [jobParams=2012_X_MC-bg_2850]
+  - dataset: '/TTWJets_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM'
+    dataset label: ttW
+    parameters: [jobParams=2012_X_MC-bg_2524]
+  - dataset: '/MET/Run2012A-13Jul2012-v1/AOD'
+    dataset label: MET_Run2012A-13Jul2012-v1_lv5
+    lumi mask: test/json/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON.txt
+    parameters: [jobParams=2012_A_data-PR_-5]
+  - dataset: '/MET/Run2012A-recover-06Aug2012-v1/AOD'
+    dataset label: MET_Run2012A-recover-06Aug2012-v1_lv5
+    lumi mask: test/json/Cert_190782-190949_8TeV_06Aug2012ReReco_Collisions12_JSON.txt
+    parameters: [jobParams=2012_A_data-PR_-55]
+  - dataset: '/MET/Run2012B-13Jul2012-v1/AOD'
+    dataset label: MET_Run2012B-13Jul2012-v1_lv5
+    lumi mask: test/json/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON.txt
+    parameters: [jobParams=2012_A_data-PR_-555]
+  - dataset: '/MET/Run2012C-PromptReco-v2/AOD'
+    dataset label: MET_Run2012C-PromptReco-v2_lv5
+    lumi mask: test/json/Cert_190456-206098_8TeV_PromptReco_Collisions12_JSON.txt
+    parameters: [jobParams=2012_A_data-PR_-5555]
+  - dataset: '/MET/Run2012C-24Aug2012-v1/AOD'
+    dataset label: MET_Run2012C-24Aug2012-v1_lv5
+    lumi mask: test/json/Cert_198022-198523_8TeV_24Aug2012ReReco_Collisions12_JSON.txt
+    parameters: [jobParams=2012_A_data-PR_-55555]
+  - dataset: '/MET/Run2012D-PromptReco-v1/AOD'
+    dataset label: MET_Run2012D-PromptReco-v1_lv5
+    lumi mask: test/json/Cert_190456-208686_8TeV_PromptReco_Collisions12_JSON.txt
+    outputs: [pat_to_bean.root]
+    parameters: [jobParams=2012_A_data-PR_-555555]
