--- a/test/beanprod.yaml
+++ b/test/beanprod.yaml
@@ -63,3 +63,13 @@ tasks:
     lumi mask: test/json/Cert_190456-208686_8TeV_PromptReco_Collisions12_JSON.txt
     outputs: [pat_to_bean.root]
     parameters: [jobParams=2012_A_data-PR_-555555]
+  - files: zz_lowmll_v2.list #to run on unpublished data, specify a list (one file per line) or a directory
+    dataset label: zz_lowmll_v2
+    cmssw config: ttH_fastSim.py
+    outputs: [fastSim_FASTSIM_HLT_PU.root]
+  - num jobs: 1000  #To use an empty source (no input files), specify the number of times you want the job repeated
+    extra inputs: ['/afs/crc.nd.edu/user/a/awoodard/MG5_aMC_v2_1_0/mgPostProcv2.py']
+    dataset label: zz_lowmll_v2
+    cmssw config: ttH_fastSim.py
+    outputs: [fastSim_FASTSIM_HLT_PU.root]
+
