--- a/examples/beanprod.yaml
+++ b/examples/beanprod.yaml
@@ -19,7 +19,7 @@ use dashboard: true
 ### use configuration above to run simple jobs ###
 
 task defaults:
-    cmssw config: test/makeBEAN_cfg.py
+    cmssw config: makeBEAN_cfg.py
     # if this is not specified, the cmssw config will be loaded to look for output modules and global tags (slower)
     outputs: [ttH_pat2bean_53x.root]
     # optional renaming of files, based on their basename and extension:
@@ -48,27 +48,27 @@ tasks:
     parameters: [jobParams=2012_X_MC-bg_2524]
   - dataset: '/MET/Run2012A-13Jul2012-v1/AOD'
     label: MET_Run2012A-13Jul2012-v1_lv5
-    lumi mask: test/json/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON.txt
+    lumi mask: json/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON.txt
     parameters: [jobParams=2012_A_data-PR_-5]
   - dataset: '/MET/Run2012A-recover-06Aug2012-v1/AOD'
     label: MET_Run2012A-recover-06Aug2012-v1_lv5
-    lumi mask: test/json/Cert_190782-190949_8TeV_06Aug2012ReReco_Collisions12_JSON.txt
+    lumi mask: json/Cert_190782-190949_8TeV_06Aug2012ReReco_Collisions12_JSON.txt
     parameters: [jobParams=2012_A_data-PR_-55]
   - dataset: '/MET/Run2012B-13Jul2012-v1/AOD'
     label: MET_Run2012B-13Jul2012-v1_lv5
-    lumi mask: test/json/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON.txt
+    lumi mask: json/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON.txt
     parameters: [jobParams=2012_A_data-PR_-555]
   - dataset: '/MET/Run2012C-PromptReco-v2/AOD'
     label: MET_Run2012C-PromptReco-v2_lv5
-    lumi mask: test/json/Cert_190456-206098_8TeV_PromptReco_Collisions12_JSON.txt
+    lumi mask: json/Cert_190456-206098_8TeV_PromptReco_Collisions12_JSON.txt
     parameters: [jobParams=2012_A_data-PR_-5555]
   - dataset: '/MET/Run2012C-24Aug2012-v1/AOD'
     label: MET_Run2012C-24Aug2012-v1_lv5
-    lumi mask: test/json/Cert_198022-198523_8TeV_24Aug2012ReReco_Collisions12_JSON.txt
+    lumi mask: json/Cert_198022-198523_8TeV_24Aug2012ReReco_Collisions12_JSON.txt
     parameters: [jobParams=2012_A_data-PR_-55555]
   - dataset: '/MET/Run2012D-PromptReco-v1/AOD'
     label: MET_Run2012D-PromptReco-v1_lv5
-    lumi mask: test/json/Cert_190456-208686_8TeV_PromptReco_Collisions12_JSON.txt
+    lumi mask: json/Cert_190456-208686_8TeV_PromptReco_Collisions12_JSON.txt
     outputs: [pat_to_bean.root]
     parameters: [jobParams=2012_A_data-PR_-555555]
   - files: zz_lowmll_v2.list #to run on unpublished data, specify a list (one file per line) or a directory
